--- a/test/test_pool.html
+++ b/test/test_pool.html
@@ -14,9 +14,10 @@
 		<title>Basic sigma.js example</title>
 		<script src="../deps/sigma.min.js"></script>
 		<script src="../src/genome.js"></script>
+		<script src="../src/pool.js"></script>
 	</head>
 	<body>
 		<div id="container"></div>
-		<script src="./test_genome.js"></script>
+		<script src="./test_pool.js"></script>
 	</body>
 </html>
