--- a/example.html
+++ b/example.html
@@ -32,13 +32,18 @@
 	</head>
 	<body>
 		<div id="text_div">
-			<p id="text_information">loading</p>
+			<p> this examples show a neat brain that learn to play to kind of rock-paper-scissors</p> 
+			<p> a game is 3 hands (the three possibility of computer), at the end of the game, the fitness of the brain is the score he made</p>
+			<p> a hand is : computer chose rock or paper or scissors, the brain take this information in input and outputs rock paper or scissors, if computer win score decrease by one, if brain win score increase by one.</p>
+			<p> graph are displayed each 100 brain </p>
+			<p id="text_on_current">loading</p>
+			<p id="text_on_best">loading</p>
 		</div>
 		<div id="performance_graph"> 
-			<p> perf </p> 
+			<p> performance graph showing the fitness of the current genome in the time </p> 
 		</div>
 		<div id="network_graph"> 
-			<p> net </p> 
+			<p> network graph showing the current neural network </p> 
 		</div>
 		<script src="./example.js"></script>
 	</body>
